--- a/Idea_collection_system/views/app_management.html
+++ b/Idea_collection_system/views/app_management.html
@@ -111,55 +111,6 @@
 
     </section>
 
-
-    <!---------admin categories section------------------------------>
-    
-    <!---------reported posts table------------>
-
-
-    <div class="reports">
-        <h1>Reported Posts</h1>
-        <div class="table-container">
-            <table class="reports-table">
-                <thead class="table-head">
-                    <tr>
-                        <th>Reported By</th>
-                        <th>Idea</th>
-                        <th>Report Content</th>
-                        <th>Report Time</th>
-                        
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="row">
-                        <td>J.Miles</td>
-                        <td>Idea 1</td>
-                        <td>Theresa.N</td>
-                        <td>3rd October, 2023 15:12</td>
-                        <td><i class="fas fa-times-circle"></i></td>
-                    </tr>
-                    <tr class="row">
-                        <td>Keran.P</td>
-                        <td>Idea 1</td>
-                        <td>Theresa.N</td>
-                        <td>3rd November, 2023 22:12</td>
-                        <td><i class="fas fa-times-circle"></i></td>
-                    </tr>
-                    <tr class="row">
-                        <td>Keran.P</td>
-                        <td>Idea 1</td>
-                        <td>Jane.M</td>
-                        <td>23rd October, 2023 12:32</td>
-                        <td><i class="fas fa-times-circle"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-
-
-        </div>
-    </div>
-
-
     <section class="ban-users">
 
         <h1>System Users List</h1>
@@ -204,6 +155,32 @@
         </div>
     </section>
 
+    <!---------reported posts table------------>
+    
+    
+    <div class="reports">
+        <h1>Reported Posts</h1>
+        <div class="table-container" id="reports-container">
+            <table class="reports-table">
+                <thead class="table-head">
+                    <tr>
+                        <th>Reported By</th>
+                        <th>Idea</th>
+                        <th>Report Content</th>
+                        <th>Report Time</th>
+    
+                    </tr>
+                </thead>
+                <tbody id="reports-tbody">
+    
+    
+                </tbody>
+            </table>
+    
+    
+        </div>
+    </div>
+
     <section class="admin">
         <p>Closure Dates</p><br>
         <div class="closure">
@@ -221,6 +198,8 @@
     
         <br>
     
+
+        <button style="padding: 2rem; border-radius: 10px;" id="download-documents-zipped-btn"></button>
     </section> 
 
     <footer>
