--- a/Idea_collection_system/views/app_management.html
+++ b/Idea_collection_system/views/app_management.html
@@ -13,7 +13,7 @@
     <!--========== Fontawesome cdn ==========-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/vendor/swal2.js"></script>
 
 
 </head>
@@ -100,7 +100,7 @@
                     </tr>
                 </thead>
                 <tbody id="categories-tbody">
-                    
+
                 </tbody>
             </table>
             <div class="buttons">
@@ -124,7 +124,7 @@
                         <th>Last Log In Date</th>
                         <th>Account Type</th>
                         <th>Active</th>
-                        
+
                     </tr>
                 </thead>
                 <tbody id="users-tbody">
@@ -156,8 +156,8 @@
     </section>
 
     <!---------reported posts table------------>
-    
-    
+
+
     <div class="reports">
         <h1>Reported Posts</h1>
         <div class="table-container" id="reports-container">
@@ -168,16 +168,16 @@
                         <th>Idea</th>
                         <th>Report Content</th>
                         <th>Report Time</th>
-    
+
                     </tr>
                 </thead>
                 <tbody id="reports-tbody">
-    
-    
+
+
                 </tbody>
             </table>
-    
-    
+
+
         </div>
     </div>
 
@@ -195,12 +195,12 @@
             <br>
             <button class="button" onclick="updateClosureDates()"><i class="fas fa-save"></i> Save Changes</button>
         </div>
-    
+
         <br>
-    
+
 
         <button style="padding: 2rem; border-radius: 10px;" id="download-documents-zipped-btn"></button>
-    </section> 
+    </section>
 
     <footer>
         <div class="info">
