--- a/Idea_collection_system/views/contact.html
+++ b/Idea_collection_system/views/contact.html
@@ -13,7 +13,7 @@
     <!--========== Fontawesome cdn ==========-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/vendor/swal2.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 
