--- a/Idea_collection_system/views/login.html
+++ b/Idea_collection_system/views/login.html
@@ -5,7 +5,7 @@
   <Title>Login</Title>
   <link rel="Stylesheet" type="text/css" href="css/style.css">
   <meta Name="viewport" content="width=device-width,initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="./js/vendor/swal2.js"></script>
 </head>
 
 <body>
@@ -48,4 +48,3 @@
   </div>
   <script defer src="./js/login.js"></script>
 </body>
-
