--- a/Idea_collection_system/views/signup/staff.html
+++ b/Idea_collection_system/views/signup/staff.html
@@ -4,7 +4,7 @@
 <head>
       <Title>Sign Up</Title>
       <link rel="Stylesheet" type="text/css" href="../css/style.css">
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="./js/vendor/swal2.js"></script>
       <meta Name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
@@ -41,7 +41,7 @@
                         <br>
 
                         <select id="department_select">
-                              
+
                         </select>
 
                         <br>
