--- a/Idea_collection_system/views/signup/staff.html
+++ b/Idea_collection_system/views/signup/staff.html
@@ -4,7 +4,7 @@
 <head>
       <Title>Sign Up</Title>
       <link rel="Stylesheet" type="text/css" href="../css/style.css">
-      <script src="./js/vendor/swal2.js"></script>
+      <script src="../js/vendor/swal2.js"></script>
       <meta Name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
